--- a/index.html
+++ b/index.html
@@ -12,10 +12,43 @@
     
   </head>
   <body>
-    <section class="page-header">
+<!--     <section class="page-header">
+    </section> -->
+
+    <section>
+        <h1>Tour One of the Greenest Homes in the US</h1>
+
+<strong>Saturday, September 15! </strong>
+
+<h2>Come Test Drive the Future - Today!</h2>
+    <p>The first annual CoHERE Fair will take place on Saturday, September 15th from 11 am - 6 pm! The public is invited to experience the LilyPad Dojo’s unveiling of the transformation of a 1950s split-level track house into a leading edge sustainable home at 1825 Maddux Drive in Redwood City, CA. Within the same area, National Drive Electric Week offers rides to any interested in the raw power of electric cars, sourced from neighbors and friends around Woodside Plaza, Redwood City. Silicon Valley Tour De Coop will also be sharing the space, as bicyclists tour chicken coops, backyard gardens, and neighborhood homesteads.</p>
+    <p>The house itself will be divided into several zones focused on each of the specialized parts of the house. Hear from the experts about what they worked on, and more importantly, the WHY behind it. Tour guides will lead groups through each zone, to ensure a comfortable and in-depth experience.</p>
+ 
+<h2>Within the LilyPad Dojo discover...</h2>
+
+    <p>Come experience the transformation of a 1950s split-level tract house into one of the greenest properties in the US -- right here in Redwood City!</p>
+
+    <p>Learn from the home owners and leading design professionals about this architectural gem and the inspiration behind it. Activities planned throughout the day include:</p>
+
+    <ul>
+        <li>💮 11am-6 pm: Self-Guided Tours - Enjoy self-guided tours and intimate Q&amp;A sessions with design professionals throughout the day. (Be prepared for fresh-baked cookies!)</li>
+
+        <li>💮 Noon-2 pm: Lunch sponsored by Bianchini’s Market (Optional: $20 per person)</li>
+
+        <li>💮 Noon, 1 pm, 2 pm, 3 pm: Private Guided Tours - 30-minute interactive guided tours will lead participants through the unique features of the house. </li>
+
+        <li>💮 5-6pm: Closing Keynote and Discussion with Author and Green Home Expert, Ann Edminster - Learn the latest in green home architecture through this talk and Q&amp;A.</li>
+    </ul>
+
+<h2>More about the home:</h2>
+    <p>This newly-remodeled all-electric solar-powered home has the first permitted residential greywater system in Redwood City. Made for high durability and low maintenance, this property features an eclectic blend of a modern zen aesthetic with steampunk whimsy and farmhouse ruggedness, and includes high performance features such as an induction cooktop, triple-pane windows, heat recovery ventilator, multiple heat pumps, wireless LED lighting, low and no-VOC materials, exterior roll shutters, 12kW micro-inverted solar array, edible landscaping, and EIFS (“Exterior Insulation and Finish System”).</p>
+
+
+<h2>E-mail Sign-up</h2>
+
     </section>
 
     <footer class="site-footer">
 
-    <span class="site-footer-credits">Join the revolution.</span>
+        <span class="site-footer-credits">Join the revolution.</span>
     </footer>
