--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section>
         <h1>Tour One of the Greenest Homes in the US</h1>
-
+<img src="IMG/3D-LilyPad.png" />
 <strong>Saturday, September 15! </strong>
 
 <h2>Come Test Drive the Future - Today!</h2>
