--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>LilyPad Dojo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="CSS/normalize.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css?t=7.21-13:24" media="screen">
+    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css?t=7.21-13:48" media="screen">
     
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href="stylesheets/lightbox.css" rel="stylesheet">
@@ -47,6 +47,8 @@
     <p>*This tour will be held as part of CoHEREere, a fair including National Drive Electric Week, where participants will test drive the latest electric cars, and the Silicon Valley Tour De Coop, where bicyclists give tours of chicken coops, backyard gardens, and neighborhood homesteads.</p>
 
     <a class="btn" href="https://www.eventbrite.com/e/cohere-fair-2018-tickets-48226065460">RSVP on Eventbrite</a>
+
+    <a class="btn" href="">RSVP on Facebook</a>
 
 <h2>E-mail Sign-up</h2>
 
