--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>LilyPad Dojo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="CSS/normalize.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css?t=7.21-14:06" media="screen">
+    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css?t=7.21-14:11" media="screen">
     
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href="stylesheets/lightbox.css" rel="stylesheet">
@@ -53,8 +53,10 @@
 
 
     </section>
+</body>
 
-    <footer class="site-footer">
+
+<footer class="site-footer">
 
             <!-- Begin MailChimp Signup Form -->
     <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
@@ -76,4 +78,4 @@
     </div>
 
     <!--End mc_embed_signup-->
-    </footer>
+</footer>
