--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
     </style>
-    <div id="mc_embed_signup">
+    <div id="mc_embed_signup" class="e-mailSignup">
     <form action="https://ben-grandy.us18.list-manage.com/subscribe/post?u=763b8059bcd003cea2e6c320f&amp;id=33de836562" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll">
         <label for="mce-EMAIL">Stay connected to LilyPad.house &amp; High-Performance Homes!</label>
