--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
   </head>
   <body>
+    <main>
 <!--     <section class="page-header">
     </section> -->
 
@@ -55,6 +56,7 @@
 
 
     </section>
+    </main>
 </body>
 
 
