--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>LilyPad Dojo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="CSS/normalize.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css?t=7.21-14:32" media="screen">
+    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css?t=7.21-14:35" media="screen">
 
     <link href="CSS/mailchimp.css" rel="stylesheet" type="text/css">
     
@@ -15,11 +15,11 @@
   </head>
   <body>
     <main>
-<!--     <section class="page-header">
-    </section> -->
 
-    <section>
+    <section class="page-header">
         <h1>Tour One of the Greenest Homes in the US</h1>
+
+    </section>
 <img src="IMG/3D-LilyPad.png" />
 <strong>Saturday, September 15! </strong>
  
