--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="CSS/normalize.css" media="screen">
     <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css?t=7.21-14:35" media="screen">
 
-    <link href="CSS/mailchimp.css" rel="stylesheet" type="text/css">
+    <link href="CSS/mailchimp.css?t=14:54" rel="stylesheet" type="text/css">
     
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link href="stylesheets/lightbox.css" rel="stylesheet">
