--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div id="mc_embed_signup" class="e-mailSignup">
     <form action="https://ben-grandy.us18.list-manage.com/subscribe/post?u=763b8059bcd003cea2e6c320f&amp;id=33de836562" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll">
-        <label for="mce-EMAIL">Stay connected to LilyPad.house &amp; High-Performance Homes!</label>
+        <label for="mce-EMAIL">Stay connected to exciting LilyPad.house updates!</label>
         <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_763b8059bcd003cea2e6c320f_33de836562" tabindex="-1" value=""></div>
