--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>LilyPad Dojo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="CSS/normalize.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css?t=7.21-15:18" media="screen">
+    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css?t=7.21-15:24" media="screen">
 
     <link href="CSS/mailchimp.css?t=15:16" rel="stylesheet" type="text/css">
     
@@ -22,7 +22,7 @@
 <img src="IMG/3D-LilyPad.png" />
 
 <main>
-<strong>Saturday, September 15! </strong>
+<strong class="date">Saturday, September 15</strong>
  
 <h2>Within the LilyPad Dojo discover...</h2>
 
