--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>LilyPad Dojo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="CSS/normalize.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css?t=7.21-18:57" media="screen">
+    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css?t=7.21-19:03" media="screen">
 
     <link href="CSS/mailchimp.css?t=18:16" rel="stylesheet" type="text/css">
     
@@ -74,6 +74,7 @@
         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_763b8059bcd003cea2e6c320f_33de836562" tabindex="-1" value=""></div>
         <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
         </div>
+        <p id="no-spam">(We promise not to spam you.)</p>
     </form>
     </div>
 
