--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <img src="IMG/3D-LilyPad.png" />
 
 <main>
-<strong class="date">Saturday, September 15</strong>
+<strong class="date">Saturday, September 15, 2018</strong>
  
 <h2>Within the LilyPad Dojo discover...</h2>
 
@@ -41,7 +41,7 @@
         <li>💮<strong>5-6pm:</strong> Closing Keynote and Discussion with Author and Green Home Expert, Ann Edminster - Learn the latest in green home architecture through this talk and Q&amp;A.</li>
     </ul>
 
-    <p class="asterisk">*This tour will be held as part of CoHEREere, a fair including National Drive Electric Week, where participants will test drive the latest electric cars, and the Silicon Valley Tour De Coop, where bicyclists give tours of chicken coops, backyard gardens, and neighborhood homesteads.</p>
+    <p class="asterisk">*This tour will be held as part of CoHERE, a fair including National Drive Electric Week, where participants will test drive the latest electric cars, and the Silicon Valley Tour De Coop, where bicyclists give tours of chicken coops, backyard gardens, and neighborhood homesteads.</p>
 
 <h2>More about the home:</h2>
     <p>This newly-remodeled all-electric solar-powered home has the first permitted residential greywater system in Redwood City. Made for high durability and low maintenance, this property features an eclectic blend of a modern zen aesthetic with steampunk whimsy and farmhouse ruggedness, and includes high performance features such as an induction cooktop, triple-pane windows, heat recovery ventilator, multiple heat pumps, wireless LED lighting, low and no-VOC materials, exterior roll shutters, 12kW micro-inverted solar array, edible landscaping, and EIFS (“Exterior Insulation and Finish System”).</p>
@@ -53,7 +53,7 @@
 
     <a class="btn" href="https://www.eventbrite.com/e/cohere-fair-2018-tickets-48226065460">RSVP on Eventbrite</a>
 
-    <a class="btn" href="">RSVP on Facebook</a>
+    <a class="btn" href="https://www.facebook.com/events/286785315213348/">RSVP on Facebook</a>
 
 
 
