--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
  
 <h2>Within the LilyPad Dojo discover...</h2>
 
-    <p>The transformation of a 1950s split-level tract house into one of the greenest properties in the US –– right here in Redwood City!*</p>
+    <p>Tour one of the most sustainable homes in the US and get a chance to ride in the world’s fastest production car -- right here in Redwood City, California!*</p>
 
-    <p>Learn from the home owners and leading design professionals about this architectural gem and the inspiration behind it. Activities planned throughout the day include:</p>
+    <p>Learn from the homeowners and leading design professionals about this architectural gem and the inspiration behind it. Activities planned throughout the day include:</p>
 
     <ul>
         <li>💮<strong>11am-6 pm:</strong> Self-Guided Tours - Enjoy self-guided tours and intimate Q&amp;A sessions with design professionals throughout the day. (Be prepared for fresh-baked cookies!)</li>
