--- a/index.html
+++ b/index.html
@@ -36,9 +36,12 @@
 
         <li>💮<strong>Noon-2 pm:</strong> Lunch sponsored by Bianchini’s Market (Optional: $20 per person)</li>
 
-        <li>💮<strong>Noon, 1 pm, 2 pm, 3 pm:</strong> Private Guided Tours - 30-minute interactive guided tours will lead participants through the unique features of the house. </li>
+        <li>💮<strong>Noon, 1 pm, 2 pm, 3 pm:</strong> Private Guided Tours - Sign up to learn about the unique features of The Lilypad Dojo through interactive guided tours of the house. </li>
+
+        <li>💮<strong>Noon - 5pm:</strong> Electric Cars - Check out several local electric vehicles as part of National Drive Electric Week, including the latest Tesla Model S P100D which can rocket from 0 to 60 in 2.3 seconds.</li>
 
         <li>💮<strong>5-6pm:</strong> Closing Keynote and Discussion with Author and Green Home Expert, Ann Edminster - Learn the latest in green home architecture through this talk and Q&amp;A.</li>
+        
     </ul>
 
     <p class="asterisk">*This tour will be held as part of CoHERE, a fair including National Drive Electric Week, where participants will test drive the latest electric cars, and the Silicon Valley Tour De Coop, where bicyclists give tours of chicken coops, backyard gardens, and neighborhood homesteads.</p>
