--- a/index.html
+++ b/index.html
@@ -32,22 +32,23 @@
     <p>Learn from the homeowners and leading design professionals about this architectural gem and the inspiration behind it. Activities planned throughout the day include:</p>
 
     <ul>
-        <li>💮<strong>11am-6 pm:</strong> Self-Guided Tours - Enjoy self-guided tours and intimate Q&amp;A sessions with design professionals throughout the day. (Be prepared for fresh-baked cookies!)</li>
+        <li>💮<strong>11am-6 pm: Self-Guided Tours </strong>- Enjoy self-guided tours and intimate Q&amp;A sessions with design professionals throughout the day. (Be prepared for fresh-baked cookies!)</li>
 
-        <li>💮<strong>Noon-2 pm:</strong> Lunch sponsored by Bianchini’s Market (Optional: $20 per person)</li>
+        <li>💮<strong>Noon-2 pm: Lunch </strong>sponsored by <a href="http://bianchinismarket.com/">Bianchini’s Market</a> (Optional: $20 per person)</li>
 
-        <li>💮<strong>Noon, 1 pm, 2 pm, 3 pm:</strong> Private Guided Tours - Sign up to learn about the unique features of The Lilypad Dojo through interactive guided tours of the house. </li>
+        <li>💮<strong>Noon, 1 pm, 2 pm, 3 pm: Private Guided Tours </strong>- Sign up to learn about the unique features of The Lilypad Dojo through interactive guided tours of the house. </li>
 
-        <li>💮<strong>Noon - 5pm:</strong> Electric Cars - Check out several local electric vehicles as part of National Drive Electric Week, including the latest Tesla Model S P100D which can rocket from 0 to 60 in 2.3 seconds.</li>
+        <li>💮<strong>Noon - 5pm: Electric Cars </strong>- Check out several local electric vehicles as part of National Drive Electric Week, including the latest <a href="https://www.tesla.com/models">Tesla Model S P100D</a> which can rocket from 0 to 60 in 2.3 seconds.</li>
 
-        <li>💮<strong>5-6pm:</strong> Closing Keynote and Discussion with Author and Green Home Expert, Ann Edminster - Learn the latest in green home architecture through this talk and Q&amp;A.</li>
-        
+        <li>💮<strong>5-6pm: Closing Keynote and Discussion </strong>- Join author and green home expert Ann Edminster to earn the latest in green home architecture through this talk and Q&amp;A.</li>
+
     </ul>
 
     <p class="asterisk">*This tour will be held as part of CoHERE, a fair including National Drive Electric Week, where participants will test drive the latest electric cars, and the Silicon Valley Tour De Coop, where bicyclists give tours of chicken coops, backyard gardens, and neighborhood homesteads.</p>
 
 <h2>More about the home:</h2>
-    <p>This newly-remodeled all-electric solar-powered home has the first permitted residential greywater system in Redwood City. Made for high durability and low maintenance, this property features an eclectic blend of a modern zen aesthetic with steampunk whimsy and farmhouse ruggedness, and includes high performance features such as an induction cooktop, triple-pane windows, heat recovery ventilator, multiple heat pumps, wireless LED lighting, low and no-VOC materials, exterior roll shutters, 12kW micro-inverted solar array, edible landscaping, and EIFS (“Exterior Insulation and Finish System”).</p>
+    <p>This 1950’s tract house has been transformed into an all-electric solar-powered home with the first permitted residential greywater system in Redwood City. Made for high-durability and low-maintenance, this property features an eclectic blend of a modern zen aesthetic with steampunk whimsy and farmhouse ruggedness, and includes high performance features such as an induction cooktop, triple-pane windows, heat recovery ventilator, multiple heat pumps, wireless LED lighting, natural finishes, exterior roll shutters, 12kW micro-inverted solar array, EV chargers, edible landscaping, and EIFS (“Exterior Insulation and Finish System”).
+    </p>
 
 <h2>Come Test Drive the Future - Today!</h2>
     <p>The first annual CoHERE Fair will take place on Saturday, September 15th from 11 am - 6 pm! The public is invited to experience the LilyPad Dojo’s unveiling of the transformation of a 1950s split-level track house into a leading edge sustainable home at 1825 Maddux Drive in Redwood City, CA. Within the same area, <a href="https://driveelectricweek.org/event.php?eventid=1395" target="_blank">National Drive Electric Week</a> offers rides to any interested in the raw power of electric cars, sourced from neighbors and friends around Woodside Plaza, Redwood City. <a href="https://tourdecoop.org/"  target="_blank">Silicon Valley Tour De Coop</a> will also be sharing the space, as bicyclists tour chicken coops, backyard gardens, and neighborhood homesteads.</p>
