mail chimp fix and target windows

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     <ul>
         <li>💮<strong>11am-6 pm: Self-Guided Tours </strong>- Enjoy self-guided tours and intimate Q&amp;A sessions with design professionals throughout the day. (Be prepared for fresh-baked cookies!)</li>
 
-        <li>💮<strong>Noon-2 pm: Lunch </strong>sponsored by <a href="http://bianchinismarket.com/">Bianchini’s Market</a> (Optional: $20 per person)</li>
+        <li>💮<strong>Noon-2 pm: Lunch </strong>sponsored by <a href="http://bianchinismarket.com/" target="_blank">Bianchini’s Market</a> (Optional: $20 per person)</li>
 
         <li>💮<strong>Noon, 1 pm, 2 pm, 3 pm: Private Guided Tours </strong>- Sign up to learn about the unique features of The Lilypad Dojo through interactive guided tours of the house. </li>
 
-        <li>💮<strong>Noon - 5pm: Electric Cars </strong>- Check out several local electric vehicles as part of National Drive Electric Week, including the latest <a href="https://www.tesla.com/models">Tesla Model S P100D</a> which can rocket from 0 to 60 in 2.3 seconds.</li>
+        <li>💮<strong>Noon - 5pm: Electric Cars </strong>- Check out several local electric vehicles as part of National Drive Electric Week, including the latest <a href="https://www.tesla.com/models" target="_blank">Tesla Model S P100D</a> which can rocket from 0 to 60 in 2.3 seconds.</li>
 
         <li>💮<strong>5-6pm: Closing Keynote and Discussion </strong>- Join author and green home expert Ann Edminster to earn the latest in green home architecture through this talk and Q&amp;A.</li>
 
@@ -71,16 +71,18 @@
             <!-- Begin MailChimp Signup Form -->
     <div id="mc_embed_signup" class="e-mailSignup">
     <form action="https://ben-grandy.us18.list-manage.com/subscribe/post?u=763b8059bcd003cea2e6c320f&amp;id=33de836562" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-        <label for="mce-EMAIL">Stay connected to exciting LilyPad.house updates!</label>
-        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_763b8059bcd003cea2e6c320f_33de836562" tabindex="-1" value=""></div>
-        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-        </div>
-        <p id="no-spam">(We promise not to spam you.)</p>
-    </form>
+    <div id="mc_embed_signup_scroll">
+    <label for="mce-EMAIL">Stay connected to exciting LilyPad.house updates!</label>
+    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_763b8059bcd003cea2e6c320f_33de836562" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
+    <p id="no-spam">(We promise not to spam you.)</p>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
 
     <!--End mc_embed_signup-->
 </footer>
