--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>LilyPad Dojo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="CSS/normalize.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css?t=7.21-19:03" media="screen">
+    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css?t=7.22-16:03" media="screen">
 
     <link href="CSS/mailchimp.css?t=18:16" rel="stylesheet" type="text/css">
     
@@ -20,6 +20,8 @@
         <h1>Tour One of the Greenest Homes in the US</h1>
 
     </section>
+<img src="IMG/event-cover.png" id="banner"/>
+
 <img src="IMG/3D-LilyPad.png" />
 
 <main>
