--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" type="text/css" href="CSS/normalize.css" media="screen">
     <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css?t=7.22-16:29" media="screen">
 
-    <link href="CSS/mailchimp.css?t=18:16" rel="stylesheet" type="text/css">
+    <link href="CSS/mailchimp.css?t=16:16" rel="stylesheet" type="text/css">
     
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href="stylesheets/lightbox.css" rel="stylesheet">
     
   </head>
   <body>
@@ -22,16 +21,15 @@
     </section>
 <img src="IMG/event-cover.png" id="banner"/>
 
-<img src="IMG/3D-LilyPad.png" />
-
 <main>
-<strong class="date">Saturday, September 15, 2018</strong>
  
 <h2>Within the LilyPad Dojo discover...</h2>
 
     <p>Tour one of the most sustainable homes in the US and get a chance to ride in the world’s fastest production car -- right here in Redwood City, California!*</p>
 
     <p>Learn from the homeowners and leading design professionals about this architectural gem and the inspiration behind it. Activities planned throughout the day include:</p>
+
+    <strong class="date">Saturday, September 15, 2018</strong>
 
     <ul>
         <li>💮<strong>11am-6 pm: Self-Guided Tours </strong>- Enjoy self-guided tours and intimate Q&amp;A sessions with design professionals throughout the day. (Be prepared for fresh-baked cookies!)</li>
@@ -47,6 +45,8 @@
     </ul>
 
     <p class="asterisk">*This tour will be held as part of CoHERE, a fair including National Drive Electric Week, where participants will test drive the latest electric cars, and the Silicon Valley Tour De Coop, where bicyclists give tours of chicken coops, backyard gardens, and neighborhood homesteads.</p>
+
+<img src="IMG/3D-LilyPad.png" id="sketchup"/>
 
 <h2>More about the home:</h2>
     <p>This 1950’s tract house has been transformed into an all-electric solar-powered home with the first permitted residential greywater system in Redwood City. Made for high-durability and low-maintenance, this property features an eclectic blend of a modern zen aesthetic with steampunk whimsy and farmhouse ruggedness, and includes high performance features such as an induction cooktop, triple-pane windows, heat recovery ventilator, multiple heat pumps, wireless LED lighting, natural finishes, exterior roll shutters, 12kW micro-inverted solar array, EV chargers, edible landscaping, and EIFS (“Exterior Insulation and Finish System”).
