border-radius action

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             max-width: 500px;
             background: rgba(169, 169, 169, 0.84);
             margin: 0 auto;
+            border-radius: 10px;
         }
         .copy {
             color: white;
