--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>LilyPad Dojo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="CSS/normalize.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css?t=7.22-16:55" media="screen">
+    <link rel="stylesheet" type="text/css" href="CSS/global.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css" media="screen">
 
     <link href="CSS/mailchimp.css?t=16:16" rel="stylesheet" type="text/css">
     
