--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>LilyPad Dojo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="CSS/global.css?t=23-15" media="screen">
+    <link rel="stylesheet" type="text/css" href="CSS/global.css" media="screen">
         
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
@@ -16,7 +16,6 @@
   </head>
 <body>
 
- <div id="nav-menu"></div>
 
 <!-- Site Overlay -->
 <div class="site-overlay"></div>
@@ -27,7 +26,7 @@
     <button class="menu-btn">&#9776; Menu</button>
 </div>
 
-
+ <div id="nav-menu"></div>
 
 
     <footer>
@@ -48,12 +47,6 @@
     </footer>
 
 <script src="JS/global.js"></script>
-
-<script> 
-    $(function(){
-      $("#nav-menu").load("nav-menu.html"); 
-    });
-</script>
 
 </body>
 
