--- a/nav-menu.html
+++ b/nav-menu.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head profile="http://www.w3.org/2005/10/profile">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="CSS/global.css?t=23-15" media="screen">
+    <link rel="stylesheet" type="text/css" href="CSS/global.css" media="screen">
         
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     
