--- a/home.html
+++ b/home.html
@@ -16,6 +16,8 @@
   </head>
 <body>
 
+    <h1>V2</h1>
+
 
 <!-- Site Overlay -->
 <div class="site-overlay"></div>
@@ -47,7 +49,11 @@
     </footer>
 
 <script src="JS/global.js"></script>
-
+<script>
+$(function(){
+      $("#nav-menu").load("nav-menu.html"); 
+    });
+</script>
 </body>
 
 </html>
