--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
   </head>
 <body>
 
-    <h1>V3</h1>
+    <h1>V4</h1>
 
 
 <!-- Site Overlay -->
@@ -24,34 +24,18 @@
 
 <!-- Your Content -->
 <div id="container">
-    <!-- Menu Button -->
-    <button class="menu-btn">&#9776; Menu</button>
-</div>
 
  <div id="nav-menu"></div>
 
+</div>
 
-    <footer>
-        <!-- Begin MailChimp Signup Form -->
-        <div id="mc_embed_signup" class="e-mailSignup">
-        <form action="https://ben-grandy.us18.list-manage.com/subscribe/post?u=763b8059bcd003cea2e6c320f&amp;id=10558e2ddd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-        <label for="mce-EMAIL">Stay connected to exciting LilyPad.house updates!</label>
-        <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Enter e-mail" required>
-        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_763b8059bcd003cea2e6c320f_33de836562" tabindex="-1" value=""></div>
-        <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-        </div>
-        <p id="no-spam">(We promise not to spam you.)</p>
-        </form>
-        </div>
-        <!--End MailChimp-->
-    </footer>
+<footer></footer>
 
 <script src="JS/global.js"></script>
 <script>
 $(function(){
-      $("#nav-menu").load("nav-menu.html"); 
+      $("#nav-menu").load("nav-menu.html");
+      $("footer").load("footer.html"); 
     });
 </script>
 </body>
