--- a/home.html
+++ b/home.html
@@ -16,26 +16,22 @@
   </head>
 <body>
 
-    <h1>V4</h1>
 
-
-<!-- Site Overlay -->
-<div class="site-overlay"></div>
-
-<!-- Your Content -->
 <div id="container">
+
+<h1>V5</h1>
 
  <div id="nav-menu"></div>
 
 </div>
 
-<footer></footer>
+ <div id="footer"></div>
 
 <script src="JS/global.js"></script>
 <script>
 $(function(){
       $("#nav-menu").load("nav-menu.html");
-      $("footer").load("footer.html"); 
+      $("#footer").load("footer.html"); 
     });
 </script>
 </body>
