--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,4 @@
+ <footer>
         <!-- Begin MailChimp Signup Form -->
         <div id="mc_embed_signup" class="e-mailSignup">
         <form action="https://ben-grandy.us18.list-manage.com/subscribe/post?u=763b8059bcd003cea2e6c320f&amp;id=10558e2ddd" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -12,3 +13,5 @@
         </form>
         </div>
         <!--End MailChimp-->
+
+</footer>
