--- a/home.html
+++ b/home.html
@@ -16,12 +16,14 @@
   </head>
 <body>
 
+<!-- Menu Button -->
+<button class="menu-btn">&#9776; Menu</button>
+ <div id="nav-menu"></div>
+
 
 <div id="container">
 
-<h1>V5</h1>
-
- <div id="nav-menu"></div>
+<h1>V6</h1>
 
 </div>
 
