--- a/home.html
+++ b/home.html
@@ -16,24 +16,22 @@
   </head>
 <body>
 
-<!-- Menu Button -->
-<button class="menu-btn">&#9776; Menu</button>
- <div id="nav-menu"></div>
-
 
 <div id="container">
 
-<h1>V6</h1>
+<h1>V7</h1>
+
+ <div id="nav-menu"></div>
 
 </div>
 
- <div id="footer"></div>
-
+<!--  <div id="footer"></div>
+ -->
 <script src="JS/global.js"></script>
 <script>
 $(function(){
       $("#nav-menu").load("nav-menu.html");
-      $("#footer").load("footer.html"); 
+      // $("#footer").load("footer.html"); 
     });
 </script>
 </body>
