--- a/home.html
+++ b/home.html
@@ -16,22 +16,24 @@
   </head>
 <body>
 
+<!-- Site Overlay -->
+<div class="site-overlay"></div>
 
 <div id="container">
 
-<h1>V7</h1>
+<h1>V8</h1>
 
  <div id="nav-menu"></div>
 
 </div>
 
-<!--  <div id="footer"></div>
- -->
+ <div id="footer"></div>
+
 <script src="JS/global.js"></script>
 <script>
 $(function(){
       $("#nav-menu").load("nav-menu.html");
-      // $("#footer").load("footer.html"); 
+      $("#footer").load("footer.html"); 
     });
 </script>
 </body>
