--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
 
 <div id="container">
 
-<h1>V8</h1>
+<h1>V9</h1>
 
  <div id="nav-menu"></div>
 
@@ -30,12 +30,12 @@
  <div id="footer"></div>
 
 <script src="JS/global.js"></script>
-<script>
+<!-- <script>
 $(function(){
       $("#nav-menu").load("nav-menu.html");
       $("#footer").load("footer.html"); 
     });
-</script>
+</script> -->
 </body>
 
 </html>
