--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
   </head>
 <body>
 
-    <h1>v13</h1>
+    <h1>v14</h1>
 
  <div id="nav-menu"></div>
 
@@ -52,9 +52,9 @@
 <script src="JS/global.js"></script>
 
 <script> 
-    $(function(){
-      $("#nav-menu").load("nav-menu.html"); 
-    });
+    // $(function(){
+    //   $("#nav-menu").load("nav-menu.html"); 
+    // });
 </script>
 
 </body>
