give head a try?

--- a/home.html
+++ b/home.html
@@ -12,11 +12,19 @@
     <style type="text/css">
 
     </style>
+
+    <script src="JS/global.js"></script>
+
+    <script> 
+        $(function(){
+          $("#nav-menu").load("nav-menu.html"); 
+        });
+    </script>
     
   </head>
 <body>
 
-    <h1>v14</h1>
+    <h1>v15</h1>
 
  <div id="nav-menu"></div>
 
@@ -48,14 +56,6 @@
         </div>
         <!--End MailChimp-->
     </footer>
-
-<script src="JS/global.js"></script>
-
-<script> 
-    // $(function(){
-    //   $("#nav-menu").load("nav-menu.html"); 
-    // });
-</script>
 
 </body>
 
