--- a/nav-menu.html
+++ b/nav-menu.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" type="text/css" href="CSS/global.css" media="screen">
         
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+
+    <script src="JS/global.js"></script>
     
   </head>
 <body>
