--- a/home.html
+++ b/home.html
@@ -15,11 +15,11 @@
   </head>
 <body>
 
-    <h1>V4</h1>
+    <h1>V5</h1>
 
 
-<!-- Site Overlay -->
-<div class="site-overlay"></div>
+<!--  Site Overlay 
+<div class="site-overlay"></div> -->
 
 <!-- Your Content -->
 <div id="container">
