try moving away button

--- a/home.html
+++ b/home.html
@@ -15,16 +15,15 @@
   </head>
 <body>
 
-    <h1>V5</h1>
+    <h1>V6</h1>
 
 
-<!--  Site Overlay 
-<div class="site-overlay"></div> -->
+<!-- Site Overlay for Nav Bar -->
+<div class="site-overlay"></div>
 
-<!-- Your Content -->
+<!-- Content -->
 <div id="container">
-    <!-- Menu Button -->
-    <button class="menu-btn">&#9776; Menu</button>
+    
 </div>
 
  <div id="nav-menu"></div>
