--- a/nav-menu.html
+++ b/nav-menu.html
@@ -10,6 +10,10 @@
     
   </head>
 <body>
+
+<!-- Menu Button -->
+<button class="menu-btn">&#9776; Menu</button>
+
     <!-- Pushy Menu -->
 <nav class="pushy pushy-left">
     <div class="pushy-content">
