--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <style type="text/css">
 
     h1 {
-        font: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+        font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     }
     
     </style>
@@ -18,7 +18,7 @@
   </head>
 <body>
 
-    <h1>Ve</h1>
+    <h1>V'</h1>
 
 
 <!-- Site Overlay for Nav Bar -->
