--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
   </head>
 <body>
 
-    <h1>WTTFFFF</h1>
+    <h1>fuck me.</h1>
 
 
 <!-- Site Overlay for Nav Bar -->
@@ -32,12 +32,7 @@
 <div id="footer"></div>
 
 <script src="JS/global.js"></script>
-<script>
-$(function(){
-      $("#nav-menu").load("nav-menu.html");
-      $("#footer").load("footer.html"); 
-    });
-</script>
+
 </body>
 
 </html>
