--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
   </head>
 <body>
 
-    <h1>fuck me.</h1>
+    <h1>fuck me1.</h1>
 
 
 <!-- Site Overlay for Nav Bar -->
@@ -32,7 +32,12 @@
 <div id="footer"></div>
 
 <script src="JS/global.js"></script>
-
+<script type="text/javascript">
+$(window).load(function(){
+      $("#nav-menu").load("nav-menu.html");
+      $("#footer").load("footer.html"); 
+    });
+</script>
 </body>
 
 </html>
