remove some from nav

--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
   </head>
 <body>
 
-    <h1>fuck me3.</h1>
+    <h1>44.</h1>
 
 
 <!-- Site Overlay for Nav Bar -->
@@ -34,7 +34,7 @@
 <script src="JS/global.js"></script>
 <script type="text/javascript">
 $(function(){
-      // $("#nav-menu").load("nav-menu.html");
+      $("#nav-menu").load("nav-menu.html");
       $("#footer").load("footer.html"); 
     });
 </script>
