change is a coming

--- a/nav-menu.html
+++ b/nav-menu.html
@@ -1,4 +1,7 @@
 
+<head>
+    <link rel="stylesheet" type="text/css" href="CSS/pushy.css" media="screen">
+</head>
     <!-- Pushy Menu -->
 <nav class="pushy pushy-left">
     <div class="pushy-content">
@@ -24,3 +27,4 @@
         </ul>
     </div>
 </nav>
+<script src="JS/pushy.js"></script>
