--- a/home.html
+++ b/home.html
@@ -17,13 +17,13 @@
     <h1>Are you there, watson?</h1>
 
 
-    <!-- Site Overlay for Nav Bar -->
+    <!-- Site Overlay for Nav Menu -->
     <div class="site-overlay"></div>
 
     <!-- Content -->
     <div id="container">
-        <!-- Menu Button -->
-        <button class="menu-btn">&#9776; Menu</button>
+        <!-- Nav Menu Button -->
+        <button class="menu-btn">&#9776;</button>
 
     </div>
 
