--- a/home.html
+++ b/home.html
@@ -14,23 +14,36 @@
 </head>
 <body>
 
-    <h1>Are you there, watson?</h1>
-
-
     <!-- Site Overlay for Nav Menu -->
     <div class="site-overlay"></div>
+    <!-- Nav Menu Button -->
+        <button class="menu-btn">&#9776;</button>
+        <div id="nav-menu"></div>
 
     <!-- Content -->
     <div id="container">
-        <!-- Nav Menu Button -->
-        <button class="menu-btn">&#9776;</button>
+        <h1>Are you there, watson?</h1>
+        
+        <div class="split left">
+            <div class="centered">
+            <img src="img_avatar2.png" alt="Avatar woman">
+            <h2>Jane Flex</h2>
+            <p>Some text.</p>
+            </div>
+        </div>
 
+        <div class="split right">
+            <div class="centered">
+            <img src="img_avatar.png" alt="Avatar man">
+            <h2>John Doe</h2>
+            <p>Some text here too.</p>
+            </div>
+        </div>
     </div>
 
-    <div id="nav-menu"></div>
 
+<div id="footer"></div>
 
-    <div id="footer"></div>
 </body>
 
     <script src="JS/global.js"></script>
