--- a/home.html
+++ b/home.html
@@ -22,9 +22,9 @@
 
     <!-- Content -->
     <div id="container">
-        <h1>Are you there, george?</h1>
+        <h1>Are you there, harry?</h1>
         
-<!--         <div class="split left">
+        <div class="split left">
             <div class="centered">
             <img src="img_avatar2.png" alt="Avatar woman">
             <h2>Jane Flex</h2>
@@ -38,7 +38,7 @@
             <h2>John Doe</h2>
             <p>Some text here too.</p>
             </div>
-        </div> -->
+        </div>
     </div>
 
 
