--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
         <div id="nav-menu"></div>
 
     <!-- Content -->
-    <div id="container">
+    <div class="container">
         <h1>Are you there, harry?</h1>
         
         <div class="split left">
