--- a/home.html
+++ b/home.html
@@ -16,16 +16,19 @@
     <!-- Site Overlay for Nav Menu -->
     <div class="site-overlay"></div>
 
-        <div id="nav-menu"></div>
+    <div id="nav-menu"></div>
 
-    <!-- Content -->
-    <div class="container">
-        <nav>
+    <nav>
+        <div class="nav-wrapper">
             <!-- Nav Menu Button -->
             <button class="menu-btn">&#9776;</button>
             
             <h1>Lilypad.house</h1>
-        </nav>
+        </div>
+    </nav>
+
+    <!-- Content -->
+    <div class="container">
         <div>
             <div class="split left">
                 <div class="centered">
