--- a/home.html
+++ b/home.html
@@ -24,6 +24,8 @@
             <button class="menu-btn">&#9776;</button>
             
             <h1>Lilypad.house</h1>
+
+            <a href="index.html"><img src="IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
     </nav>
 
