--- a/nav-menu.html
+++ b/nav-menu.html
@@ -10,7 +10,7 @@
             <li class="pushy-link"><a href="#">Experience</a></li>
             <!-- Submenu -->
             <li class="pushy-submenu">
-                <button>Systems</button>
+                <button>Systems <i id="nav-dropdown"></i></button>
                 <ul>
                 <hr>
                     <li class="pushy-link"><a href="#">Electricity</a></li>
