--- a/home.html
+++ b/home.html
@@ -50,20 +50,63 @@
 
         <h1>Homes That Work For Us</h1>
 
-        <div>
+        <div class="row">
+            <div class="three-column">
+                <img class="icons" src="Icons/net-positive.png" />
+                <h2>Net Positive Energy</h2>
+                <p>Stop paying energy bills. Generate your own energy through rooftop solar to power your cars, house, and life.</p>
+            </div>
+            <div class="three-column">
+                <img class="icons"  src="Icons/great-experience.png" />
+                <h2>Great Experience</h2>
+                <p>Your home should be comfortable, healthy, convenient, and delightful. Let’s build homes that work for us.</p>
+            </div>
+            <div class="three-column">
+                <img class="icons"  src="Icons/community.png" />
+                <h2>Build Community</h2>
+                <p>Lily Pad builds community through human-centered design— enrich your community through welcoming spaces that encourage
+connection.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="banner">
+        <blockquote>
+            <span class="quote-mark">“</span>Incentive structure is flawed, not building quality. Building quality is cost-effective and should be incentivized.                                                                                   
+        </blockquote>
+        <p class="quote-citation">-LilyPad Homeowners</p>
+    </div>
+
+    <div class="container">
+        <div class="row">
             <div class="split left">
-                <div class="centered">
-                <img src="img_avatar2.png" alt="Avatar woman">
-                <h2>Jane Flex</h2>
-                <p>Some text.</p>
+                <div class="copy-block">
+                    <h2>Innovative Design</h2>
+                    <p>Lily Pad’s design marries the latest in technology and high performance with 21st century architecture that pays homage to its 1950’s-era track house roots. It’s community-centered design fosters relationships and creates a healthy, joyful life.</p>
+
+                    <button  class="float-right">
+                        <a href="design.html">Learn More ></a>
+                    </button>
                 </div>
             </div>
 
             <div class="split right">
-                <div class="centered">
-                <img src="img_avatar.png" alt="Avatar man">
-                <h2>John Doe</h2>
-                <p>Some text here too.</p>
+                 <img src="IMG/Home/innovative-design.jpg">
+            </div>
+        </div>
+        <div class="row">
+            <div class="split left">
+                <img src="Placeholder/placeholder-img.png">
+            </div>
+
+            <div class="split right">
+                <div class="copy-block">
+                    <h2>Great Experience</h2>
+                    <p>Whether you’re barbecuing with friends, running kids to a soccer game, or coming home late after a long work day, Lily Pad is Home, enabling your busy lifestyle while providing a quiet, clean, comfortable and healthy sanctuary.</p>
+
+                    <button  class="float-right">
+                        <a href="experience.html">Learn More ></a>
+                    </button>
                 </div>
             </div>
         </div>
