--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
             <!-- Nav Menu Button -->
             <button class="menu-btn">&#9776;</button>
             
-            <p id="nav-title">LilyPad.house</p>
+            <div id="nav-title">LilyPad.house</div>
 
             <a href="index.html"><img src="IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
@@ -54,20 +54,21 @@
             <div class="three-column">
                 <img class="icons" src="Icons/net-positive.png" />
                 <h2>Net Positive Energy</h2>
-                <p>Stop paying energy bills. Generate your own energy through rooftop solar to power your cars, house, and life.</p>
+                <p class="body-sm">Stop paying energy bills. Generate your own energy through rooftop solar to power your cars, house, and life.</p>
             </div>
             <div class="three-column">
                 <img class="icons"  src="Icons/great-experience.png" />
                 <h2>Great Experience</h2>
-                <p>Your home should be comfortable, healthy, convenient, and delightful. Let’s build homes that work for us.</p>
+                <p class="body-sm">Your home should be comfortable, healthy, convenient, and delightful. Let’s build homes that work for us.</p>
             </div>
             <div class="three-column">
                 <img class="icons"  src="Icons/community.png" />
                 <h2>Build Community</h2>
-                <p>Lily Pad builds community through human-centered design— enrich your community through welcoming spaces that encourage
+                <p class="body-sm">Lily Pad builds community through human-centered design— enrich your community through welcoming spaces that encourage
 connection.</p>
             </div>
         </div>
+        <div class="twenty-pad"></div>
     </div>
 
     <div class="banner">
@@ -82,7 +83,7 @@ connection.</p>
             <div class="split left">
                 <div class="copy-block">
                     <h2>Innovative Design</h2>
-                    <p>Lily Pad’s design marries the latest in technology and high performance with 21st century architecture that pays homage to its 1950’s-era track house roots. It’s community-centered design fosters relationships and creates a healthy, joyful life.</p>
+                    <p class="body-md">Lily Pad’s design marries the latest in technology and high performance with 21st century architecture that pays homage to its 1950’s-era track house roots. It’s community-centered design fosters relationships and creates a healthy, joyful life.</p>
 
                     <button  class="float-right">
                         <a href="design.html">Learn More ></a>
@@ -102,7 +103,7 @@ connection.</p>
             <div class="split right">
                 <div class="copy-block">
                     <h2>Great Experience</h2>
-                    <p>Whether you’re barbecuing with friends, running kids to a soccer game, or coming home late after a long work day, Lily Pad is Home, enabling your busy lifestyle while providing a quiet, clean, comfortable and healthy sanctuary.</p>
+                    <p class="body-md">Whether you’re barbecuing with friends, running kids to a soccer game, or coming home late after a long work day, Lily Pad is Home, enabling your busy lifestyle while providing a quiet, clean, comfortable and healthy sanctuary.</p>
 
                     <button  class="float-right">
                         <a href="experience.html">Learn More ></a>
