--- a/home.html
+++ b/home.html
@@ -83,7 +83,7 @@ connection.</p>
             <div class="split left">
                 <div class="copy-block">
                     <h2>Innovative Design</h2>
-                    <p class="body-md">Lily Pad’s design marries the latest in technology and high performance with 21st century architecture that pays homage to its 1950’s-era track house roots. It’s community-centered design fosters relationships and creates a healthy, joyful life.</p>
+                    <p class="body-md">LilyPad’s design marries the latest in technology and high performance with 21st century architecture that pays homage to its 1950’s-era track house roots. It’s community-centered design fosters relationships and creates a healthy, joyful life.</p>
 
                     <button  class="float-right learn-more">
                         <a href="design.html">Learn More ></a>
@@ -103,7 +103,7 @@ connection.</p>
             <div class="split right">
                 <div class="copy-block">
                     <h2>Great Experience</h2>
-                    <p class="body-md">Whether you’re barbecuing with friends, running kids to a soccer game, or coming home late after a long work day, Lily Pad is Home, enabling your busy lifestyle while providing a quiet, clean, comfortable and healthy sanctuary.</p>
+                    <p class="body-md">Whether you’re barbecuing with friends, running kids to a soccer game, or coming home late after a long work day, LilyPad is home, enabling your busy lifestyle while providing a quiet, clean, comfortable and healthy sanctuary.</p>
 
                     <button  class="float-right learn-more">
                         <a href="experience.html">Learn More ></a>
